# JGuard

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_mas_trial.py
Dashboard/JGuard/: App.xaml  App.xaml.cs  JGuard.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
Dashboard/JGuard/Models/: ChatRequest.cs  ChatResponse.cs  DeleteSessionResponse.cs  Session.cs  SessionConfig.cs
Dashboard/JGuard/Pages/: ChatPage.xaml  ChatPage.xaml.cs  ChatUtilities.cs  EvaluationPage.xaml  (+9 more)
backend/: README.md  __init__.py  requirements.txt
backend/app/: __init__.py  main.py
data_generation/custom/: cutom_data_generator.py  utils.py
data_generation/custom_multi_agent/: generate.ipynb  generate_integrated.ipynb
defenders/obfuscation/: __init__.py  pipeline.py  stage1_profiling.py  stage2_decoding.py  stage3_unicoding.py  stage4_leet.py  stage5_defragmenting.py  stage6_canonicalizing.py  stage8_harm_classifier.py
defenders/role-playing/: pipeline.py
defenders/role_playing/: __init__.py  pipeline.py
defenses/obfuscation/: __init__.py  helper.py  obfuscation_test_cases.csv  pipeline.py  pipeline_test.csv  stage1_profiling.py  stage2_decoding.py  stage3_unicoding.py  stage4_leet.py  stage5_defragmenting.py  stage6_canonicalizing.py  stage7_metadata.py  stage8_harm_classifier.py  starter.py  test_pipeline.py
docs/: api-reference.md
evaluation/: evaluator.py  main.py
evaluation/harm_detection/: llm_judge.py
evaluation/redteaming_tools/: __init__.py
system/single_llm/: llm.py  target_llm.py
(+182 files in other folders)
